<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:splitMotionEvents="false"
    tools:context=".MainActivity" >
	<TableRow>
	    <TextView
	        android:id="@+id/textView_0"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:gravity="center_horizontal"
    	    android:textSize = "44sp"  
    	    android:text="@string/text_title"
    	    android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>
    
    <TableRow>

    	<TextView
    	    android:id="@+id/textView_1"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:textSize = "20sp"  
    	    android:text="@string/text_name"
    	    android:textAppearance="?android:attr/textAppearanceLarge" />

   		<TextView
   		    android:id="@+id/textView_2"
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content"
   		    android:layout_weight="1"
   		    android:textSize = "20sp"  
   		    android:text="@string/text_data"
   		    android:textAppearance="?android:attr/textAppearanceLarge" />

    	<TextView
    	    android:id="@+id/textView_3"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:textSize = "20sp"  
    	    android:text="@string/text_id"
    	    android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>
    <TableRow>

    	<EditText
    	    android:id="@+id/text_input1"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:ems="10"
    	    android:inputType="text"
    	    android:text="@string/defalt_name" />

    	<EditText
    	    android:id="@+id/text_input2"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:ems="10"
    	    android:inputType="text" />

    	<EditText
    	    android:id="@+id/text_input3"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:ems="10"
    	    android:inputType="text" />

	</TableRow>
	<TableRow>
	    <Button
	        android:id="@+id/button_push"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:minHeight="30dp"
	        android:text="@string/button_push" />
	    <Button
        	android:id="@+id/button_display"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:minHeight="30dp"
        	android:text="@string/button_display" />
	</TableRow>	
	
    <TableRow>
    	<TextView
    	    android:id="@+id/textView_4"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:textSize = "20sp"  
    	    android:text="@string/text_search"
    	    android:textAppearance="?android:attr/textAppearanceLarge" />
     
    </TableRow>
    
	<TableRow>
	    <EditText
    	    android:id="@+id/text_search"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:ems="10"
    	    android:inputType="text" />
    </TableRow>
    
	
	

	<TableRow>

	    <Button
	        android:id="@+id/button_search1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:minHeight="30dp"
	        android:text="@string/button_search1" />

    	<Button
    	    android:id="@+id/button_search2"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:minHeight="30dp"
    	    android:text="@string/button_search2" />
	
	</TableRow>
	
	<TableRow>
	    <Button
        	android:id="@+id/button_update"
            android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:layout_weight="1"
      	    android:minHeight="30dp"
     	    android:text="@string/button_update" />

    	<Button
    	   	android:id="@+id/button_delete"
     	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:minHeight="30dp"
    	    android:text="@string/button_delete" />    
	</TableRow>
	
	<TableRow>

	   	<TextView
	   	    android:id="@+id/textView_5"
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:layout_weight="1"
	   	    android:textSize = "20sp"  
	   	    android:text="@string/text_name"
	   	    android:textAppearance="?android:attr/textAppearanceLarge" />

	    <TextView
	        android:id="@+id/textView_6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:textSize = "20sp"  
	        android:text="@string/text_data"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

		<TextView
		    android:id="@+id/textView_7"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:textSize = "20sp"  
		    android:text="@string/text_id"
		    android:textAppearance="?android:attr/textAppearanceLarge" />

	</TableRow>
	<TableRow>

    	<EditText
    	    android:id="@+id/text_output1"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:ems="10"
    	    android:inputType="none" />

    	<EditText
        	android:id="@+id/text_output2"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:inputType="none"
        	android:ems="10" />
		<EditText
        	android:id="@+id/text_output3"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:inputType="none"
        	android:ems="10" />
	</TableRow>

	

</TableLayout>